Fix wrapping bug for patient summary

--- a/public/css/care/patient-summary.less
+++ b/public/css/care/patient-summary.less
@@ -8,6 +8,13 @@
 		margin: 0;
 		padding: 0;
 		max-width: 1024px;
+		min-width: 960px;
+		display: inline-block;
+	}
+
+	.col {
+		width: 33%;
+		float: left;
 	}
 
 	.patient-image {
